--- a/css/styles.css
+++ b/css/styles.css
@@ -70,9 +70,9 @@ h1 {
 
 /* classe de esconder */
 
-/*.hide {
+.hide {
     display: none !important;
-} */
+}
 
 /* placar */
 
@@ -116,6 +116,5 @@ h1 {
     font-size: 50px;
     background-color: #000;
     color: #FFF;
-    padding: 20px;
-    display: none;
+    padding: 20px;    
 }
